[package]
name = "bramble"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy-tnua = "0.19.0"
bevy-tnua-rapier2d = "0.7.0"
bevy_rapier2d = "0.27.0"
leafwing-input-manager = "0.15.0"
noise = "0.9.0"
static_assertions = "1.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
